--- a/package.json
+++ b/package.json
@@ -20,35 +20,39 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs/common": "^6.7.2",
-    "@nestjs/core": "^6.7.2",
+    "@nestjs/common": "^7.6.13",
+    "@nestjs/config": "^0.6.3",
+    "@nestjs/core": "^7.6.13",
     "@nestjs/mongoose": "^7.2.3",
-    "@nestjs/platform-express": "^6.7.2",
+    "@nestjs/platform-express": "^7.6.13",
     "@nestjs/platform-socket.io": "^7.6.13",
     "@nestjs/websockets": "^7.6.13",
+    "axios": "^0.21.1",
+    "dotenv": "^8.2.0",
     "mongoose": "^5.11.18",
     "reflect-metadata": "^0.1.13",
-    "rimraf": "^3.0.0",
-    "rxjs": "^6.5.3"
+    "rimraf": "^3.0.2",
+    "rxjs": "^6.6.6",
+    "socket.io-redis": "^5.4.0"
   },
   "devDependencies": {
-    "@nestjs/cli": "^6.9.0",
-    "@nestjs/schematics": "^6.7.0",
-    "@nestjs/testing": "^6.7.1",
-    "@types/express": "^4.17.1",
-    "@types/jest": "^24.0.18",
-    "@types/node": "^12.7.5",
+    "@nestjs/cli": "^7.5.6",
+    "@nestjs/schematics": "^7.2.7",
+    "@nestjs/testing": "^7.6.13",
+    "@types/express": "^4.17.11",
+    "@types/jest": "^26.0.20",
+    "@types/node": "^14.14.31",
     "@types/socket.io": "^2.1.13",
-    "@types/supertest": "^2.0.8",
-    "jest": "^24.9.0",
-    "prettier": "^1.18.2",
-    "supertest": "^4.0.2",
-    "ts-jest": "^24.1.0",
-    "ts-loader": "^6.1.1",
-    "ts-node": "^8.4.1",
+    "@types/supertest": "^2.0.10",
+    "jest": "^26.6.3",
+    "prettier": "^2.2.1",
+    "supertest": "^6.1.3",
+    "ts-jest": "^26.5.2",
+    "ts-loader": "^8.0.17",
+    "ts-node": "^9.1.1",
     "tsconfig-paths": "^3.9.0",
-    "tslint": "^5.20.0",
-    "typescript": "^3.6.3"
+    "tslint": "^5.20.1",
+    "typescript": "^4.2.2"
   },
   "jest": {
     "moduleFileExtensions": [
